@@ -15,6 +15,8 @@ New features:
 
 Bug fixes:
 
+* Fix cursor activation on explicit song position change
+
 Other:
 
 * Optimize track creation
